--- a/src/templates/layout.html.jinja
+++ b/src/templates/layout.html.jinja
@@ -17,8 +17,21 @@
             </div>
         </header>
         <div class="container">
-            {% block content %}
-            {% endblock %}
+            <div class="page_content">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <div class=notification>
+                        {% for message in messages %}
+                            <p>{{ message }}</p>
+                        {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
+                <div class="container">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
         </div>
     </body>
 </html>
