refactor: moved filesharing to blueprint
- Moved all functions and pages related to filesharing functionality
site.py -> filesharing.py, connected via blueprint

--- a/src/templates/index.html.jinja
+++ b/src/templates/index.html.jinja
@@ -2,6 +2,6 @@
 {% block content %}
     <h1>Hello and welcome to The Tempest</h1>
     <p>To start uploading right away, proceed 
-    <a href="{{ url_for("upload_file") }}">here</a>
+    <a href="{{ url_for('filesharing.upload_file') }}">here</a>
     </p>
 {% endblock %}
