--- a/src/templates/layout.html.jinja
+++ b/src/templates/layout.html.jinja
@@ -11,7 +11,7 @@
                 <h1 class="logo">The Tempest</h1>
                 <strong><nav>
                     <ul class="menu">
-                        <li><a href="{{ url_for('upload_file') }}">Upload</a></li>
+                        <li><a href="{{ url_for('filesharing.upload_file') }}">Upload</a></li>
                     </ul>
                 </nav></strong>
             </div>
