--- a/src/templates/layout.html.jinja
+++ b/src/templates/layout.html.jinja
@@ -8,11 +8,22 @@
     <body>
         <header>
             <div class="container">
-                <h1 class="logo">The Tempest</h1>
                 <strong><nav>
-                    <ul class="menu">
-                        <li><a href="{{ url_for('filesharing.upload_file') }}">Upload</a></li>
-                    </ul>
+                    <div class="menubar">
+                        <div class="menu_left">
+                            <a href="{{ url_for('index') }}">The Tempest</a>
+                            <a href="{{ url_for('filesharing.upload_file') }}">Upload</a>
+                        </div>
+                        <div class="menu_right">
+                            {% if g.user %}
+                                <span>{{ g.user["login"] }}</span>
+                                <a href="{{ url_for('auth.logout') }}">Logout</a>
+                            {% else %}
+                                <a href="{{ url_for('auth.register') }}">Register</a>
+                                <a href="{{ url_for('auth.login') }}">Log In</a>
+                            {% endif %}
+                        </div>
+                    </div>
                 </nav></strong>
             </div>
         </header>
