feat: auth improvements
- Now registration time and last access time are also saved in db
- Now has min/max length limits for login and password. Hardcoded for
the time being, will add envars later
- Now style of displayed username match style of other menubar elements
- Added missing formatting

--- a/src/templates/layout.html.jinja
+++ b/src/templates/layout.html.jinja
@@ -16,7 +16,7 @@
                         </div>
                         <div class="menu_right">
                             {% if g.user %}
-                                <span>{{ g.user["login"] }}</span>
+                                <a><span>{{ g.user["login"] }}</span></a>
                                 <a href="{{ url_for('auth.logout') }}">Logout</a>
                             {% else %}
                                 <a href="{{ url_for('auth.register') }}">Register</a>
