feat: stats counter
- Added users/files counter to index
- Added typehints to database module
- Reworked collection calls, moved into database module
- Personal uploads are now stored in id-based directory, to provide
ability to change login name later

--- a/src/templates/index.html.jinja
+++ b/src/templates/index.html.jinja
@@ -1,7 +1,8 @@
 {% extends "layout.html.jinja" %}
 {% block content %}
     <h1>Hello and welcome to The Tempest</h1>
+    <p>Currently serving {{ files_amount }} files from {{ users_amount }} users</p>
+    <p></p>
     <p>To start uploading right away, proceed 
-    <a href="{{ url_for('filesharing.upload_file') }}">here</a>
-    </p>
+    <a href="{{ url_for('filesharing.upload_file') }}">here</a></p>
 {% endblock %}
