--- a/src/templates/layout.html.jinja
+++ b/src/templates/layout.html.jinja
@@ -16,7 +16,7 @@
                         </div>
                         <div class="menu_right">
                             {% if g.user %}
-                                <a><span>{{ g.user["login"] }}</span></a>
+                                <a href="{{ url_for('profile.show_uploads') }}">{{ g.user["login"] }}</a>
                                 <a href="{{ url_for('auth.logout') }}">Logout</a>
                             {% else %}
                                 <a href="{{ url_for('auth.register') }}">Register</a>
